fix: component name

--- a/packages/debug/index.html
+++ b/packages/debug/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>supercolorpixelisticxdridocious</title>
+    <title>example | supercolorpixelisticxdridocious</title>
   </head>
-  <body></body>
+  <body>
+    <supercolorpixelistic-xdridocious></supercolorpixelistic-xdridocious>
+    <script src="../web-component/dist/build.js"></script>
+  </body>
 </html>
