feat: pass props

--- a/packages/debug/index.html
+++ b/packages/debug/index.html
@@ -7,7 +7,11 @@
     <title>example | supercolorpixelisticxdridocious</title>
   </head>
   <body>
-    <supercolorpixelistic-xdridocious></supercolorpixelistic-xdridocious>
+    <supercolorpixelistic-xdridocious
+      text="スーパーキラキラ​
+    カラフルクッキリ​
+    ディスプレイ。​"
+    ></supercolorpixelistic-xdridocious>
     <script src="../web-component/dist/build.js"></script>
   </body>
 </html>
