--- a/packages/debug/index.html
+++ b/packages/debug/index.html
@@ -7,11 +7,21 @@
     <title>example | supercolorpixelisticxdridocious</title>
   </head>
   <body>
-    <supercolorpixelistic-xdridocious
-      text="スーパーキラキラ​
-    カラフルクッキリ​
-    ディスプレイ。​"
-    ></supercolorpixelistic-xdridocious>
+    <div>
+      <supercolorpixelistic-xdridocious
+        text="スーパーキラキラ​"
+      ></supercolorpixelistic-xdridocious>
+    </div>
+    <div>
+      <supercolorpixelistic-xdridocious
+        text="カラフルクッキリ​​"
+      ></supercolorpixelistic-xdridocious>
+    </div>
+    <div>
+      <supercolorpixelistic-xdridocious
+        text="ディスプレイ。​"
+      ></supercolorpixelistic-xdridocious>
+    </div>
     <script src="../web-component/dist/build.js"></script>
   </body>
 </html>
