--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <supercolorpixelisticxdridocious></supercolorpixelisticxdridocious>
-    <script src=""></script>
+    <script src="https://cdn.jsdelivr.net/npm/supercolorpixelisticxdridocious@0.0.3"></script>
   </body>
 </html>
