chore: add image

--- a/packages/debug/index.html
+++ b/packages/debug/index.html
@@ -38,7 +38,7 @@
     </div>
     <div>
       <supercolorpixelistic-xdridocious
-        text="ディスプレイ。​"
+        text="​Web Components"
       ></supercolorpixelistic-xdridocious>
     </div>
     <script src="../web-component/dist/build.js"></script>
