--- a/index.html
+++ b/index.html
@@ -5,9 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>example | supercolorpixelisticxdridocious</title>
+    <style>
+      body {
+        font-family: "SF Pro JP", "SF Pro Display", "SF Pro Icons",
+          "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo,
+          "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-self: center;
+        padding-top: 100px;
+        font-weight: 600;
+        font-size: 80px;
+      }
+      @media (max-width: 765px) {
+        body {
+          font-size: 48px;
+        }
+      }
+    </style>
   </head>
   <body>
-    <supercolorpixelisticxdridocious></supercolorpixelisticxdridocious>
-    <script src="https://cdn.jsdelivr.net/npm/supercolorpixelisticxdridocious@0.0.3"></script>
+    <div>
+      <supercolorpixelistic-xdridocious
+        text="スーパーキラキラ​"
+      ></supercolorpixelistic-xdridocious>
+    </div>
+    <div>
+      <supercolorpixelistic-xdridocious
+        text="カラフルクッキリ​​"
+      ></supercolorpixelistic-xdridocious>
+    </div>
+    <div>
+      <supercolorpixelistic-xdridocious
+        text="​Web Components"
+      ></supercolorpixelistic-xdridocious>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/supercolorpixelisticxdridocious@0.0.4"></script>
   </body>
 </html>
