--- a/packages/example/index.html
+++ b/packages/example/index.html
@@ -5,6 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>example | supercolorpixelisticxdridocious</title>
+    <meta
+      property="og:url"
+      content="https://sadnessojisan.github.io/SupercolorpixelisticXDRidocious"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="example | supercolorpixelisticxdridocious"
+    />
+    <meta
+      property="og:description"
+      content="supercolorpixelisticxdridocious Web Components"
+    />
+    <meta property="og:site_name" content="supercolorpixelisticxdridocious" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/sadnessOjisan/SupercolorpixelisticXDRidocious/main/imgs/cover.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <style>
       body {
         font-family: "SF Pro JP", "SF Pro Display", "SF Pro Icons",
@@ -41,6 +61,6 @@
         text="​Web Components"
       ></supercolorpixelistic-xdridocious>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/supercolorpixelisticxdridocious@0.0.5"></script>
+    <script src="https://cdn.jsdelivr.net/npm/supercolorpixelisticxdridocious"></script>
   </body>
 </html>
